--- a/view/TeilebestandPanel.form
+++ b/view/TeilebestandPanel.form
@@ -99,18 +99,20 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="tblMain">
           <Properties>
+            <Property name="autoCreateRowSorter" type="boolean" value="true" postCode="tblMain.setSelectionMode(ListSelectionModel.SINGLE_SELECTION );"/>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="setTableWidths(tblMain);">
               <Connection code="tm" type="code"/>
             </Property>
+            <Property name="autoResizeMode" type="int" value="4"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Standardcursor"/>
+              <Color id="Default Cursor"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="TeileTableModel tm = new TeileTableModel();&#xa;tm.setData(tm.dummyArrayList());"/>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="TeileTableModel tm = new TeileTableModel();&#xa;tm.setData(TeilebestandCollection.getInstance());"/>
           </AuxValues>
         </Component>
       </SubComponents>
