--- a/view/LagerbestandPanel.form
+++ b/view/LagerbestandPanel.form
@@ -85,7 +85,7 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="tabMaintable">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="setTableWidths(tabMaintable);">
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="setTableWidths(tabMaintable);&#xa;tabMaintable.setAutoResizeMode(javax.swing.JTable.AUTO_RESIZE_ALL_COLUMNS);">
               <Connection code="tm" type="code"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -96,7 +96,7 @@
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="LagerbestandTableModel tm = new LagerbestandTableModel();&#xa;tm.setData(tm.dummyArrayList());"/>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="LagerbestandTableModel tm = new LagerbestandTableModel();&#xa;tm.setData(LagerbestandCollection.getInstance());&#xa;tabMaintable.setAutoCreateRowSorter(true);&#xa;tabMaintable.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);"/>
           </AuxValues>
         </Component>
       </SubComponents>
