--- a/view/TeilebestandPanel.form
+++ b/view/TeilebestandPanel.form
@@ -41,7 +41,9 @@
                       <Component id="btnTeilAendern" min="-2" pref="151" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnTeilLoschen" min="-2" pref="151" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="btnteilEinlagern" min="-2" pref="180" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="lblTeilebestandErweitern" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="btnNeuesTeil" min="-2" pref="180" max="-2" attributes="0"/>
@@ -49,7 +51,7 @@
                   <Component id="lblTeilebestand" min="-2" pref="151" max="-2" attributes="0"/>
                   <Component id="scpMain" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="13" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -75,6 +77,7 @@
                   <Component id="btnTeilLoschen" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblTeilebestandErweitern" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnNeuesTeil" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnteilEinlagern" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="364" max="-2" attributes="0"/>
           </Group>
@@ -105,7 +108,7 @@
             </Property>
             <Property name="autoResizeMode" type="int" value="4"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Standardcursor"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
@@ -177,6 +180,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFilternActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnteilEinlagern">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Teile einlagern"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnteilEinlagernActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
