--- a/view/WarenbewegungPanel.form
+++ b/view/WarenbewegungPanel.form
@@ -103,7 +103,7 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="tblMain">
               <Properties>
-                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="setTableWidths(tblMain);">
+                <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor" postCode="setTableWidths(tblMain);&#xa;tblMain.setAutoResizeMode(javax.swing.JTable.AUTO_RESIZE_ALL_COLUMNS);">
                   <Connection code="tm" type="code"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -114,7 +114,7 @@
                 </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="WarenbewegungTableModel tm = new WarenbewegungTableModel();&#xa;tm.setData(tm.dummyArrayList());"/>
+                <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="WarenbewegungTableModel tm = new WarenbewegungTableModel();&#xa;tm.setData(WarenbewegungCollection.getInstance());&#xa;tblMain.setAutoCreateRowSorter(true);&#xa;tblMain.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);"/>
               </AuxValues>
             </Component>
           </SubComponents>
