--- a/view/BestandsaenderungFrame.form
+++ b/view/BestandsaenderungFrame.form
@@ -6,6 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -29,12 +30,10 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lblAnschaffungsgrund" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lblMenge" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblHaltbarkeitsdatum" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="txfMenge" alignment="0" min="-2" pref="60" max="-2" attributes="0"/>
-                          <Component id="txfHaltbarkeitsdatum" alignment="0" min="-2" pref="93" max="-2" attributes="0"/>
                           <Component id="spnAnschaffungsgrund" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -102,12 +101,7 @@
                   <Component id="lblMenge" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txfMenge" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblHaltbarkeitsdatum" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="txfHaltbarkeitsdatum" alignment="1" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
               <Component id="einlagernButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="34" max="32767" attributes="0"/>
           </Group>
@@ -171,16 +165,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="einlagernButtonActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="lblHaltbarkeitsdatum">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Haltbarkeitsdatum:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txfHaltbarkeitsdatum">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="dd.mm.YYYY"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbxFachTyp">
       <Properties>
