--- a/view/BestandsaenderungFrame.form
+++ b/view/BestandsaenderungFrame.form
@@ -33,8 +33,11 @@
                       </Group>
                       <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txfMenge" alignment="0" min="-2" pref="60" max="-2" attributes="0"/>
-                          <Component id="spnAnschaffungsgrund" alignment="0" max="32767" attributes="0"/>
+                          <Component id="spnAnschaffungsgrund" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="txfMenge" min="-2" pref="69" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -63,6 +66,11 @@
                           <Component id="jSeparator1" alignment="0" min="-2" pref="467" max="-2" attributes="0"/>
                           <Component id="lblEinlagern" alignment="0" min="-2" pref="131" max="-2" attributes="0"/>
                           <Component id="einlagernButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="lblHaltbarkeitsdatum" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                              <Component id="txfHaltbarkeitsdatum" min="-2" pref="69" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace min="0" pref="40" max="32767" attributes="0"/>
                   </Group>
@@ -101,7 +109,12 @@
                   <Component id="lblMenge" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txfMenge" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lblHaltbarkeitsdatum" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txfHaltbarkeitsdatum" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               <Component id="einlagernButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="34" max="32767" attributes="0"/>
           </Group>
@@ -203,6 +216,19 @@
     <Component class="javax.swing.JTextField" name="txfTeilID">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txfTeilIDActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblHaltbarkeitsdatum">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Haltbarkeitsdatum"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txfHaltbarkeitsdatum">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="dd.mm.YYYY"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txfHaltbarkeitsdatumActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
