--- a/view/BestandsaenderungFrame.form
+++ b/view/BestandsaenderungFrame.form
@@ -52,11 +52,11 @@
                                   <Group type="102" attributes="0">
                                       <Component id="cbxFachTyp" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="cbxFachX" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
                                       <Component id="cbxFachY" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="cbxFachZ" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="cbxFachX" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="txfTeilID" max="32767" attributes="0"/>
                               </Group>
@@ -90,9 +90,9 @@
                   <Component id="lblFachAdresse" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblHinweis" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbxFachTyp" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbxFachZ" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbxFachX" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbxFachY" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbxFachZ" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -189,24 +189,24 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbxFachTypActionPerformed"/>
       </Events>
     </Component>
+    <Component class="javax.swing.JComboBox" name="cbxFachZ">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new javax.swing.DefaultComboBoxModel()" type="code"/>
+        </Property>
+      </Properties>
+    </Component>
     <Component class="javax.swing.JComboBox" name="cbxFachX">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="new javax.swing.DefaultComboBoxModel()" type="code"/>
         </Property>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JComboBox" name="cbxFachY">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new javax.swing.DefaultComboBoxModel()" type="code"/>
-        </Property>
-      </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbxFachYActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbxFachXActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JComboBox" name="cbxFachZ">
+    <Component class="javax.swing.JComboBox" name="cbxFachY">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="new javax.swing.DefaultComboBoxModel()" type="code"/>
