--- a/view/BestandsaenderungFrame.form
+++ b/view/BestandsaenderungFrame.form
@@ -6,6 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -34,7 +35,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="spnAnschaffungsgrund" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Component id="txfMenge" min="-2" pref="69" max="-2" attributes="0"/>
+                              <Component id="txfMenge" min="-2" pref="40" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -68,7 +69,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lblHaltbarkeitsdatum" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                              <Component id="txfHaltbarkeitsdatum" min="-2" pref="69" max="-2" attributes="0"/>
+                              <Component id="txfHaltbarkeitsdatum" min="-2" pref="80" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="40" max="32767" attributes="0"/>
