--- a/view/BestandsaenderungFrame.form
+++ b/view/BestandsaenderungFrame.form
@@ -65,9 +65,11 @@
                       <Component id="lblHaltbarkeitsdatum" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
                       <Component id="txfHaltbarkeitsdatum" min="-2" pref="82" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="lblHinweisDatum" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -106,6 +108,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblHaltbarkeitsdatum" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txfHaltbarkeitsdatum" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblHinweisDatum" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               <Component id="einlagernButton" min="-2" max="-2" attributes="0"/>
@@ -218,11 +221,18 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txfHaltbarkeitsdatum">
       <Properties>
-        <Property name="text" type="java.lang.String" value="dd.mm.YYYY"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="&quot;&quot;" type="code"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txfHaltbarkeitsdatumActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblHinweisDatum">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Hinweis: dd.mm.yyyy"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
